@@ -84,6 +84,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #21525: Most Tkinter methods which accepted tuples now accept lists too.
+
 - Issue #10744: Fix PEP 3118 format strings on ctypes objects with a nontrivial
   shape.
 
